updates for horizontal scroll issue

--- a/src/scss/core/_utilities.scss
+++ b/src/scss/core/_utilities.scss
@@ -1,7 +1,3 @@
-html, body {
-	overflow-x: hidden;
-}
-
 // Light pink background color
 @include bg-variant(".bg-primary-light", $primary-light, true);
 @include bg-variant(".bg-blue", $bali-bod-blue, true);
